feat - bodyPart comp. completed

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^4.1.0",
     "react-loader-spinner": "^5.3.4",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
