--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^4.1.0",
     "react-loader-spinner": "^5.3.4",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0"
   },
