feat - Simial exercises done, slider improved

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.15.0",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
