chore - netlify redirect correction

--- a/.env
+++ b/.env
@@ -8,4 +8,7 @@
 # VITE_RAPID_API_KEY = 502262d9f7msh6752deb5d7139c7p182020jsn8962831b2dc3
 
 # 71raquib@gmail.com
-VITE_RAPID_API_KEY = 9d5597f0d3mshff217f81625c070p18c09bjsnafd44a5a5d07
+# VITE_RAPID_API_KEY = 9d5597f0d3mshff217f81625c070p18c09bjsnafd44a5a5d07
+
+# 72raquib@gmail.com
+VITE_RAPID_API_KEY = 9b2bccdfabmsh1843cd544524539p1adf3ajsn915d8c51afdf
