--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "host": "vite --host"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
-    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.2.0",
+    "react-player": "^2.13.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
